public/stylesheets/styles.css
p{display: inline; padding-right: 10px; font-size: 14px}

h1{font-family: sans-serif}
body{
    margin: 0;
    padding: 0;
    font-family: sans-serif;
}

#loginContainer{ 
    margin: auto;
    width: 60%;
    padding: 10px;
}
#map { 
    margin: 10px 0;
    width: 100%;
}
#mainTable{
    height: 500px; 
    overflow: auto;
}

.table, th, td {
    border: 1px solid #ddd;       
}

.table tr:nth-child(odd) {
    background-color: #f1f1f1;
}
.table tr:nth-child(even) {
    background-color: #ffffff;
}
.table-fixed thead {
  width: 97%;
}
.table-fixed tbody {
  height: 600px;
  overflow-y: auto;
  width: 100%;
}
.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
  display: block;
}
.table-fixed tbody td, .table-fixed thead > tr> th {
  float: left;
  border-bottom-width: 0;
}
#activity{cursor: pointer;}

#headerLeft{  
    height: 100px;
    border-bottom: 1px solid #ddd; 
    border-right: 1px solid #ddd;  
}
#headerRight{
    height: 100px;  
    border-bottom: 1px solid #ddd;   
}
#mainLeft{ 
    border-right: 1px solid #ddd;

}
#mainRight{ 
    margin: 0; 
 }
ul.clubs {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    width: 70px;
    float: left;
}

li {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    width: 70px;
    float: left;
    
}

